--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
   },
   "features": {
     "search": true,
-    "groupSelectorAttribute": false,
+    "groupSelectorAttribute": "субъект федерации",
     "hoverBehavior": "dim"
   },
   "informationPanel": {
