--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
   },
   "text": {
     "more": "",
-    "intro": "Group 1 - Омская область\nGroup 2 - Орловская область",
+    "intro": "Group 1 - Омская область<br>Group 2 - Орловская область",
     "title": "Сетки распространения региональных Telegram-каналов"
   },
   "legend": {
