--- a/config.json
+++ b/config.json
@@ -8,8 +8,8 @@
     "text": ""
   },
   "text": {
-    "more": "",
-    "intro": "Group 1 - Омская область<br>Group 2 - Орловская область",
+    "more": "Group 1 - Омская область\nGroup 2 - Орловская область\nGroup 3 - Москва",
+    "intro": "",
     "title": "Сетки распространения региональных Telegram-каналов"
   },
   "legend": {
