--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "text": ""
   },
   "text": {
-    "more": "Group 1 - Омская область\nGroup 2 - Орловская область\nGroup 3 - Москва",
+    "more": "",
     "intro": "",
     "title": "Сетки распространения региональных Telegram-каналов"
   },
